# Python-ics-Merger

./: .gitignore  ICS_Merger.py  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ics_merger/: __init__.py  __main__.py  cli.py  gui.py  merger.py
tests/: test_merger.py
